# KyodoAI

./: .gitignore  DYNAMIC_INTEGRATION_GUIDE.md  README.md  SUPABASE_SCHEMA.md
.portia/cache/agent_memory/prun-08846903-0346-4c45-93b2-69db3c9f0ff3/: $collaboration_emails.json  $json_output.json
.portia/cache/agent_memory/prun-6611c6ae-1ccb-44ec-9581-0670acf36dd3/: $retrieved_emails.json
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/db/: create_actions_table.sql  create_emails_table.sql  create_messages_table.sql
backend/helpers/: portia_helper.py  schemas.py  supabase_helper.py
backend/middleware/: auth_middleware.py
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: ChatPage.tsx  ChatSidebar.tsx
frontend/src/components/home/: DealCard.tsx  HomePage.tsx  OpportunitiesSidebar.tsx  ScanningAnimation.tsx
frontend/src/components/layout/: Navigation.tsx
frontend/src/components/registration/: RegistrationForm.tsx
frontend/src/pages/: Chat.tsx  Home.tsx  Index.tsx  Registration.tsx
frontend_new/: index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js
frontend_new/src/: App.css  App.tsx  index.css
frontend_new/src/components/: Avanish.tsx  ChatRooms copy.tsx  ChatRooms.tsx  Dashboard.tsx  HeroOrb.tsx  HomePage.tsx  Navigation.tsx  Navigation.tsx.old  RegistrationForm.tsx  Sparkle.tsx  SparkleField.tsx
frontend_new/src/lib/: supabaseClient.ts
frontend_new/src/pages/: ChatRoomsPage.tsx  DashboardPage.tsx  HomePage.tsx
(+8 files in other folders)
