[project]
name = "kyodo-backend"
version = "0.1.0"
description = "The only AI Agent creators need to handle every collaboration and deal autonomously, just like a personal assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "portia-sdk-python[google]>=0.7.0",
    "supabase>=2.18.1",
]
