[project]
name = "kyodo-backend"
version = "0.1.0"
description = "The only AI Agent creators need to handle every collaboration and deal autonomously, just like a personal assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "portia-sdk-python[google,mistralai]>=0.7.2",
    "supabase>=2.3.4",
]
